third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/derive_default.rs
#[cxx::bridge]
mod ffi {
    #[derive(Default)]
    enum NoDefault {
        Two,
        Three,
        Five,
        Seven,
    }

    #[derive(Default)]
    enum MultipleDefault {
        #[default]
        Two,
        Three,
        Five,
        #[default]
        Seven,
    }
}

#[cxx::bridge]
mod ffi2 {
    #[derive(Default)]
    enum BadDefault {
        #[default(repr)]
        Two,
        #[default = 3]
        Three,
    }
}

fn main() {}
